implementation css file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>CV of Omondi</title>
     <meta name="description" content="This is the CV of Omondi Sattmann" />
     <meta name="author" content="Omondi Sattmann" />
+    <link rel="stylesheet" href="mystyle.css">
 </head>
 
 <body>
