--- a/index.html
+++ b/index.html
@@ -7,36 +7,48 @@
     <title>CV of Omondi</title>
     <meta name="description" content="This is the CV of Omondi Sattmann" />
     <meta name="author" content="Omondi Sattmann" />
-    <link rel="stylesheet" href="mystyle.css">
+    <link rel="stylesheet" href="https://unpkg.com/normalize.css@8.0.1/normalize.css" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&family=Roboto:wght@100&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
 
 
-    <header>
+
+    <header class="header">
         <h1>CV of Omondi</h1>
-        <p>becoming Junior Web-Developer</p>
+        <p class="emoji-h">Junior Web-Developer Trainee</p>
         <nav>
-            <a href="#profile">Profile</a>
-            <a href="#experience">Experience</a>
-            <a href="#skills">Skills</a>
-            <a href="#contact">Contact</a>
+            <a class="nav-link" href="#profile">Profile</a>
+            <a class="nav-link" href="#experience">Experience</a>
+            <a class="nav-link" href="#skills">Skills</a>
+            <a class="nav-link" href="#contact">Contact</a>
         </nav>
+
+        <img src="img/PBbildAcc.jpg" alt="Profil Picture omondisattmann">
+        <aside class="hire-me">Hire Me</aside>
     </header>
-    <main>
+    <main class="main">
         <article id="profile">
-            <h3>Profile</h3>
+            <h3 class="article-heading">Profile</h3>
             <p> Aloha my Name is Omondi Sattmann. I'm from Munich (Germany) and i'm currently learning coding. </p>
         </article>
-        <br>
+
         <article id="experience">
-            <h3>Experience:</h3>
+            <h3 class="article-heading">Experience:</h3>
             <section>
                 <header>
-                    <h3>Shiftlead- & Projectassistant (LifeScience) </h3>
-                    <h4>" Project Covid-19"</h4>
-                    <p>(15. October 2020 -31 .03.2022)</p>
-
+                    <h3 class="experience-heading">Shiftlead- & Projectassistant (LifeScience) </h3>
+                    <p class="experience-subheading">(15. October 2020 - 31. March 2022)</p>
+                    <h4>"Project Covid-19"</h4>
                 </header>
                 <p>
                     -Leading about 150 employees in a Team of 5 People<br>
@@ -55,22 +67,20 @@
             </section>
             <section>
                 <header>
-                    <h3>Shopify Dropshipping Seller (E-Commerce)</h3>
+                    <h3 class="experience-heading">Shopify Dropshipping Seller (E-Commerce)</h3>
+                    <p class="experience-subheading">(June 2018 - today)</p>
                     <h4>Print on Demand Products</h4>
-                    <p>(June 2018 - today)</p>
                 </header>
                 <p>
                     -Google Ads Campaigns<br>
                     -Keyword-Planner
                 </p>
             </section>
-            <br>
-            <br>
-            <br>
-            <br>
+
+
         </article>
         <article id="skills">
-            <h3>Skills</h3>
+            <h3 class="article-heading">Skills</h3>
             <section>
                 <h4>Soft-Skills</h4>
             </section>
@@ -78,15 +88,12 @@
                 <h4>Technical-Skills</h4>
             </section>
         </article>
-        <br>
-        <br>
-        <br>
         <article id="contact">
-            <h3>Contact</h3>
+            <h3 class="article-heading">Contact</h3>
             <ul>
-                <li> E-Mail:<a href="mailto:omondisattmann@gmail.com">omondisattmann@gmail.com</a></li><br>
-                <li> GitHub:<a href="https://github.com/omondi96">omondi96</a></li><br>
-                <li> Discord:omondi#5502</li><br>
+                <li> E-Mail: <a href="mailto:omondisattmann@gmail.com">omondisattmann@gmail.com</a></li><br>
+                <li> GitHub: <a href="https://github.com/omondi96">omondi96</a></li><br>
+                <li> Discord: omondi#5502</li><br>
             </ul>
 
         </article>
