--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
 
 
     <header class="header">
-        <h1>CV of Omondi</h1>
-        <p class="emoji-h">Junior Web-Developer Trainee</p>
-        <nav>
+        <div class="heading-group">
+            <h1 class="main-heading">CV of Omondi</h1>
+            <p class="profession">Junior Web-Developer Trainee</p>
+        </div>
+        <nav class="navigation">
             <a class="nav-link" href="#profile">Profile</a>
             <a class="nav-link" href="#experience">Experience</a>
             <a class="nav-link" href="#skills">Skills</a>
@@ -45,7 +47,7 @@
         <article id="experience">
             <h3 class="article-heading">Experience:</h3>
             <section>
-                <header>
+                <header class="experience-header">
                     <h3 class="experience-heading">Shiftlead- & Projectassistant (LifeScience) </h3>
                     <p class="experience-subheading">(15. October 2020 - 31. March 2022)</p>
                     <h4>"Project Covid-19"</h4>
@@ -66,7 +68,7 @@
                 <br>
             </section>
             <section>
-                <header>
+                <header class="experience-header">
                     <h3 class="experience-heading">Shopify Dropshipping Seller (E-Commerce)</h3>
                     <p class="experience-subheading">(June 2018 - today)</p>
                     <h4>Print on Demand Products</h4>
@@ -97,6 +99,8 @@
             </ul>
 
         </article>
+
+        <footer class="outro-cv">Did you like my CV? Contact me</footer>
     </main>
 
 </body>
