next steps git html

--- a/index.html
+++ b/index.html
@@ -39,60 +39,89 @@
         <aside class="hire-me">Hire Me</aside>
     </header>
     <main class="main">
-        <article id="profile">
-            <h3 class="article-heading">Profile</h3>
-            <p> Aloha my Name is Omondi Sattmann. I'm from Munich (Germany) and i'm currently learning coding. </p>
+        <article class="main-article" id="profile">
+            <h3 class="main-article-heading">Profile</h3>
+            <p class="main-article-content"> Aloha my Name is Omondi Sattmann. I'm from Munich (Germany) and i'm
+                currently learning coding at Coding Bootcamp Europe. </p>
         </article>
 
-        <article id="experience">
-            <h3 class="article-heading">Experience:</h3>
-            <section>
-                <header class="experience-header">
-                    <h3 class="experience-heading">Shiftlead- & Projectassistant (LifeScience) </h3>
-                    <p class="experience-subheading">(15. October 2020 - 31. March 2022)</p>
-                    <h4>"Project Covid-19"</h4>
-                </header>
-                <p>
-                    -Leading about 150 employees in a Team of 5 People<br>
-                    -Coordination of the Data Analytic Process<br>
-                    -Processmanagement of 7 Labstations (qPCR, Data Analyse, Extraction, Lysis)<br>
-                    -Co-Built a Covid-19 sample processing process that was called "Pooling" and had a national added
-                    value
-                    that
-                    it
-                    was introduced nationally<br>
-                    -Co-Built a Labstation for the Mutant Detection of Covid-19<br>
-                    -Employee Development<br>
-                    -process monitoring up to 35.000 Samples a Day
-                </p>
-                <br>
-            </section>
-            <section>
-                <header class="experience-header">
-                    <h3 class="experience-heading">Shopify Dropshipping Seller (E-Commerce)</h3>
-                    <p class="experience-subheading">(June 2018 - today)</p>
-                    <h4>Print on Demand Products</h4>
-                </header>
-                <p>
-                    -Google Ads Campaigns<br>
-                    -Keyword-Planner
-                </p>
-            </section>
+        <article class="main-article" id="experience">
+            <h3 class="main-article-heading">Experience:</h3>
+            <div class="main-article-content">
+                <section>
+                    <header class="experience-header">
+                        <h3 class="experience-heading">Shiftlead- & Projectassistant (LifeScience) </h3>
+                        <p class="experience-subheading">(15. October 2020 - 31. March 2022)</p>
+                        <h4>"Project Covid-19"</h4>
+                    </header>
+                    <p>
+                        -Leading about 150 employees in a Team of 5 People<br>
+                        -Coordination of the Data Analytic Process<br>
+                        -Processmanagement of 7 Labstations (qPCR, Data Analyse, Extraction, Lysis)<br>
+                        -Co-Built a Covid-19 sample processing process that was called "Pooling" and had a national
+                        added
+                        value
+                        that
+                        it
+                        was introduced nationally<br>
+                        -Co-Built a Labstation for the Mutant Detection of Covid-19<br>
+                        -Employee Development<br>
+                        -process monitoring up to 35.000 Samples a Day
+                    </p>
+                    <br>
+                </section>
+                <section>
+                    <header class="experience-header">
+                        <h3 class="experience-heading">Shopify Dropshipping Seller (E-Commerce)</h3>
+                        <p class="experience-subheading">(June 2018 - today)</p>
+                        <h4>Print on Demand Products</h4>
+                    </header>
+                    <p>
+                        -Google Ads Campaigns<br>
+                        -Keyword-Planner
+                    </p>
+                </section>
+            </div>
 
 
         </article>
-        <article id="skills">
-            <h3 class="article-heading">Skills</h3>
-            <section>
-                <h4>Soft-Skills</h4>
-            </section>
-            <section>
-                <h4>Technical-Skills</h4>
-            </section>
+        <article class="main-article" id="skills">
+            <h3 class="main-article-heading">Skills</h3>
+            <div class="main-article-content">
+                <section>
+                    <h4>Soft-Skills</h4>
+                    <ul>
+                        <li>creative thinking</li>
+                        <li>communicative</li>
+                        <li>reflective</li>
+                        <li>willing to learn</li>
+                        <li>Team-Working</li>
+                    </ul>
+                </section>
+                <section>
+                    <h4>Technical-Skills</h4>
+                    <ul>
+                        <li>Process Management</li>
+                        <li>Employee Management</li>
+                        <li>Data Analysing & Monitoring</li>
+                        <li>HTML (Beginner)</li>
+                        <li>CSS (Beginner)</li>
+
+                    </ul>
+                </section>
+                <h4>next things i will learn...</h4>
+                <ul>
+                    <li>Java Script</li>
+                    <li>Node.js, REST, NPM</li>
+                    <li>Scrum, Vuex, E2E Testing </li>
+
+                </ul>
+                </section>
+            </div>
         </article>
-        <article id="contact">
-            <h3 class="article-heading">Contact</h3>
-            <ul>
+        <article class="main-article" id="contact">
+            <h3 class="main-article-heading">Contact</h3>
+            <ul class="main-article-content">
                 <li> E-Mail: <a href="mailto:omondisattmann@gmail.com">omondisattmann@gmail.com</a></li><br>
                 <li> GitHub: <a href="https://github.com/omondi96">omondi96</a></li><br>
                 <li> Discord: omondi#5502</li><br>
